{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 199,
  "lineage": "cd3a0aff-f057-92fd-1aca-e1d00cd502aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f22ef29726fa44f",
            "association_id": "eipassoc-09b1b9629ed19a28b",
            "domain": "vpc",
            "id": "eipalloc-05f22ef29726fa44f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e05ed98b260e45d9",
            "private_dns": "ip-10-0-3-101.us-east-2.compute.internal",
            "private_ip": "10.0.3.101",
            "public_dns": "ec2-18-223-167-69.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.167.69",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0102f1c6ccbb30619",
            "association_id": "eipassoc-0f4e94e42e66d7653",
            "domain": "vpc",
            "id": "eipalloc-0102f1c6ccbb30619",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0418cd5da8c7da3cf",
            "private_dns": "ip-10-0-4-187.us-east-2.compute.internal",
            "private_ip": "10.0.4.187",
            "public_dns": "ec2-3-13-185-94.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.185.94",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aadaf87c4232e3e",
            "association_id": "eipassoc-0d33d5287c46189a8",
            "domain": "vpc",
            "id": "eipalloc-01aadaf87c4232e3e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ab3c79be0c0d995c",
            "private_dns": "ip-10-0-5-160.us-east-2.compute.internal",
            "private_ip": "10.0.5.160",
            "public_dns": "ec2-3-135-46-236.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.46.236",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:internet-gateway/igw-037e84f40ac6528a3",
            "id": "igw-037e84f40ac6528a3",
            "owner_id": "250178521864",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f22ef29726fa44f",
            "association_id": "eipassoc-09b1b9629ed19a28b",
            "connectivity_type": "public",
            "id": "nat-062ad634b6f9b095e",
            "network_interface_id": "eni-0e05ed98b260e45d9",
            "private_ip": "10.0.3.101",
            "public_ip": "18.223.167.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01382400badeceaf9",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0102f1c6ccbb30619",
            "association_id": "eipassoc-0f4e94e42e66d7653",
            "connectivity_type": "public",
            "id": "nat-08179efb0e68bf1e8",
            "network_interface_id": "eni-0418cd5da8c7da3cf",
            "private_ip": "10.0.4.187",
            "public_ip": "3.13.185.94",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035e127a6a349f4ad",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aadaf87c4232e3e",
            "association_id": "eipassoc-0d33d5287c46189a8",
            "connectivity_type": "public",
            "id": "nat-01e8f621405e4dcf8",
            "network_interface_id": "eni-0ab3c79be0c0d995c",
            "private_ip": "10.0.5.160",
            "public_ip": "3.135.46.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f83ad4f3e0b4bc25",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037e84f40ac6528a3",
            "id": "r-rtb-01fab7bd0566b7c711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fab7bd0566b7c71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:route-table/rtb-0847017deaaf05dc3",
            "id": "rtb-0847017deaaf05dc3",
            "owner_id": "250178521864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062ad634b6f9b095e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "timeouts": null,
            "vpc_id": "vpc-06990372710018302"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:route-table/rtb-0178afb1fc66c0b28",
            "id": "rtb-0178afb1fc66c0b28",
            "owner_id": "250178521864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08179efb0e68bf1e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "timeouts": null,
            "vpc_id": "vpc-06990372710018302"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:route-table/rtb-0284cacf706bf3d41",
            "id": "rtb-0284cacf706bf3d41",
            "owner_id": "250178521864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e8f621405e4dcf8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "timeouts": null,
            "vpc_id": "vpc-06990372710018302"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04697a2270327cbbd",
            "route_table_id": "rtb-0847017deaaf05dc3",
            "subnet_id": "subnet-09e17d915658ff5d0"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.pri",
            "aws_subnet.pri",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e69bf774b767c40",
            "route_table_id": "rtb-0178afb1fc66c0b28",
            "subnet_id": "subnet-0354d00f7d4135632"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.pri",
            "aws_subnet.pri",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e09d2210a015d1d",
            "route_table_id": "rtb-0284cacf706bf3d41",
            "subnet_id": "subnet-0b40a144d808a5a26"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.pri",
            "aws_subnet.pri",
            "aws_subnet.pub",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:security-group/sg-0577bfa1143825c0c",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0577bfa1143825c0c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed8577d736d3c132"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "250178521864",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "timeouts": null,
            "vpc_id": "vpc-06990372710018302"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:security-group/sg-0ed8577d736d3c132",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed8577d736d3c132",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "250178521864",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "timeouts": null,
            "vpc_id": "vpc-06990372710018302"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:subnet/subnet-09e17d915658ff5d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e17d915658ff5d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250178521864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:subnet/subnet-0354d00f7d4135632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0354d00f7d4135632",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250178521864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:subnet/subnet-0b40a144d808a5a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b40a144d808a5a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250178521864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:subnet/subnet-01382400badeceaf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01382400badeceaf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250178521864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:subnet/subnet-035e127a6a349f4ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035e127a6a349f4ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250178521864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:subnet/subnet-0f83ad4f3e0b4bc25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f83ad4f3e0b4bc25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250178521864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            },
            "vpc_id": "vpc-06990372710018302"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:250178521864:vpc/vpc-06990372710018302",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e1c72cc8acaab78",
            "default_route_table_id": "rtb-01fab7bd0566b7c71",
            "default_security_group_id": "sg-04c2de7ae41049525",
            "dhcp_options_id": "dopt-5dcbaa36",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06990372710018302",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fab7bd0566b7c71",
            "owner_id": "250178521864",
            "tags_all": {
              "Iac": "Terraform",
              "Project": "petsafekennels"
            }
          }
        }
      ]
    }
  ]
}